Swapping link to chess game for subpath URL

--- a/sites.html
+++ b/sites.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Websites and online applications</h1>
-	<a href="https://chess.spiffindustries.com/"><h3><b>ASCII Chess (online version)</b></h3></a>
+	<a href="chess/"><h3><b>ASCII Chess (online version)</b></h3></a>
 	<p>This is simply a Chess game using keyboard commands and ASCII characters, developed on Python, and then redeveloped on Flask to be deployed as a web application.  The game can be played 2-player remotely using a shared code, and the game can simply be bookmarked to resume at another time.  Enjoy!</a> 
 	<a href="lesley/"><h3><b>Lesley Paige (demo)</b></h3></a>
 	<p>This is my sister's art website, built using PHP, HTML, CSS, JavaScript, and a MySQL database.  It has a fairly straight-forward layout and an admin area to allow her to add new artwork or edit existing artwork.  The link above is to a demo version of the site that does not contain any of her art, but you may see the live version at <a href="https://lesleypaige.com">lesleypaige.com</a>.  The demo version has a direct link to an unrestricted admin area that resets itself every hour (see the red button at the top of the site).</p>
