--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<a href="rpi4.html"><img class="logo" src="img/raspberry.svg" alt="Raspberry Pi" /></a>
 		<a href="android.html"><img class="logo" src="img/android.svg" alt="Android Apps" /></a>
 		<a href="https://github.com/rbrutherford3/"><img class="logo flip" src="img/github.svg" alt="GitHub Repository" /></a>
-		<a href="https://www.linkedin.com/in/rbriii/"><img class="logo flip" src="img/linkedin.svg" alt="LinkedIn" /></a>
+		<a href="https://www.linkedin.com/in/rbrutherford3/"><img class="logo flip" src="img/linkedin.svg" alt="LinkedIn" /></a>
 		<a href="https://stackoverflow.com/users/3130769/spiff"><img class="logo flip" src="img/stackoverflow.svg" alt="Stack Overflow" /></a>
 	</div>
 </body>
