--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>Spiff Industries</h1>
 	<h2>Software by <a href="https://rbrutherford3.github.io/"><b>Robert Rutherford</b></a></h2>
 	<div class="container">
-		<a href="sites.html"><img class="logo" src="img/computer.svg" alt="Websites" /></a>
+		<a href="sites.html"><img class="logo" src="img/www.svg" alt="Websites" /></a>
 		<a href="rpi4.html"><img class="logo" src="img/raspberry.svg" alt="Raspberry Pi" /></a>
 		<a href="android.html"><img class="logo" src="img/android.svg" alt="Android Apps" /></a>
 		<a href="https://github.com/rbrutherford3/"><img class="logo flip" src="img/github.svg" alt="GitHub Repository" /></a>
