Making site more responsive

--- a/android.html
+++ b/android.html
@@ -2,14 +2,15 @@
 <head>
 	<title>Android Apps | Spiff Industries</title>
 	<link rel="stylesheet" href="main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<h1>Android Apps</h1>
-	<a href="https://play.google.com/store/apps/details?id=com.rsquared.taskmaster"><h3><b>Task Master</b></h3></a>
+	<h2><a href="https://play.google.com/store/apps/details?id=com.rsquared.taskmaster">Task Master</a></h2>
 	<!-- <a href="taskmaster.html"><h3><b>Task Master</b></h3></a> -->
 	<p>This app is a simple task organizer that allows the user to set two attribute: priority and urgency.  Priority is a measure of a task's importance, whereas urgency is a measure of a task's need (or lack thereof) to be completed in a timely manner.  The idea was taken from the book <a href="https://www.franklincovey.com/the-7-habits/"><b>7 Habits of Highly Effective People</b></a>.  The tasks are then drawn out on a two-dimensional plane to show how each task compares with the next, and hopefully allow the user to prioritize efficently.  Click the link above for a online demonstration.</p>
-	<a href="https://play.google.com/store/apps/details?id=com.rsquared.jurisdictionfinder"><h3><b>Jurisdiction Finder</b></h3></a>
+	<h2><a href="https://play.google.com/store/apps/details?id=com.rsquared.jurisdictionfinder">Jurisdiction Finder</a></h2>
 	<!-- <a href="jurisdictionfinder_startup.html"><h3><b>Jurisidiction Finder</b></h3></a> -->
 	<p>This app was originally meant to be a small part of a larger project that fell through.  It simply takes an address or GPS coordinate and let's the user know what legal jurisdiction (county, city, borough, township, parish, etc) that location resides in.  Click the link above for an online demonstration.</p>
-	<p><b><a href="https://play.google.com/store/apps/developer?id=Robert+Rutherford">Both apps are available for free on Google Play</a></b></p>
+	<h2><a href="https://play.google.com/store/apps/developer?id=Robert+Rutherford">Both apps are available for free on Google Play</a></h2>
 </body>
