--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
 	<title>Spiff Industries</title>
 	<link rel="stylesheet" href="main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="text-align: center;">
 	<h1>Spiff Industries</h1>
-	<h2>Software by <a href="https://rbrutherford3.github.io/"><b>Robert Rutherford</b></a></h2>
-	<div class="container">
-		<a href="sites.html"><img class="logo" src="img/www.svg" alt="Websites" /></a>
-		<a href="rpi4.html"><img class="logo" src="img/raspberry.svg" alt="Raspberry Pi" /></a>
-		<a href="android.html"><img class="logo" src="img/android.svg" alt="Android Apps" /></a>
-		<a href="https://github.com/rbrutherford3/"><img class="logo flip" src="img/github.svg" alt="GitHub Repository" /></a>
-		<a href="https://www.linkedin.com/in/rbrutherford3/"><img class="logo flip" src="img/linkedin.svg" alt="LinkedIn" /></a>
-		<a href="https://stackoverflow.com/users/3130769/spiff"><img class="logo flip" src="img/stackoverflow.svg" alt="Stack Overflow" /></a>
-	</div>
+	<h2>Software by <a href="https://rbrutherford3.github.io/">Robert Rutherford</a></h2>
+	<a href="sites.html"><img class="logo" src="img/www.svg" alt="Websites" /><figcaption>Websites</figcaption></a>
+	<a href="rpi4.html"><img class="logo" src="img/raspberry.svg" alt="Raspberry Pi" /><figcaption>Raspberry Pi</figcaption></a>
+	<a href="android.html"><img class="logo" src="img/android.svg" alt="Android Apps" /><figcaption>Android</figcaption></a>
+	<a href="https://github.com/rbrutherford3/"><img class="logo flip" src="img/github.svg" alt="GitHub Repository" /><figcaption>GitHub</figcaption></a>
+	<a href="https://www.linkedin.com/in/rbrutherford3/"><img class="logo flip" src="img/linkedin.svg" alt="LinkedIn" /><figcaption>LinkedIn</figcaption></a>
+	<a href="https://stackoverflow.com/users/3130769/spiff"><img class="logo flip" src="img/stackoverflow.svg" alt="Stack Overflow" /><figcaption>Stack Overflow</figcaption></a>
 </body>
