Adding docx-Publisher

--- a/sites.html
+++ b/sites.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 	<h1>Websites and online applications</h1>
+	<h2><a href="docxpublisher/">docX Publisher</a></h2>
+	<p>This tool takes uploaded Microsoft Word .docx files, converts them to .pdf files, and then allows the user to arrange the titles before finally merging them in that order.  Future versions will include optional page numbers, table of contents, and cover page features.</p>
 	<h2><a href="chess/">ASCII Chess (online version)</a></h2>
 	<p>This is simply a Chess game using keyboard commands and ASCII characters, developed on Python, and then redeveloped on Flask to be deployed as a web application.  The game can be played 2-player remotely using a shared code, and the game can simply be bookmarked to resume at another time.  Enjoy!</a> 
 	<h2><a href="lesley/">Lesley Paige (demo)</a></h2>
