Adding pizzapricer and updating .gitignore

--- a/sites.html
+++ b/sites.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 	<h1>Websites and online applications</h1>
-	<h2><a href="docxpublisher/">docX Publisher</a></h2>
-	<p>This tool takes uploaded Microsoft Word .docx files, converts them to .pdf files, and then allows the user to arrange the titles before finally merging them in that order.  Future versions will include optional page numbers, table of contents, and cover page features.</p>
+	<h2><a href="pizzapricer/">Pizza Pricer</a></h2>
+	<p>Simple tool to calculate the unit price (dollar per square inch or foot) of a pizza pie (or slice)</p>
+	<h2><a href="pdfpublisher/">PDF Publisher</a></h2>
+	<p>This tool takes uploaded .doc, .docx, and .pdf files, converts them to .pdf, and then allows the user to arrange and rename the titles before finally merging them in that order.  The user may also add page numbers, a table of contents, and pdf bookmarks with detailed criteria.  Future versions will include cover page features and more.</p>
 	<h2><a href="chess/">ASCII Chess (online version)</a></h2>
 	<p>This is simply a Chess game using keyboard commands and ASCII characters, developed on Python, and then redeveloped on Flask to be deployed as a web application.  The game can be played 2-player remotely using a shared code, and the game can simply be bookmarked to resume at another time.  Enjoy!</a> 
 	<h2><a href="lesley/">Lesley Paige (demo)</a></h2>
