Adding Task Master web

--- a/sites.html
+++ b/sites.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 	<h1>Websites and online applications</h1>
+	<h2><a href="https://taskmaster.spiffindustries.com/">Task Master (web)</a></h2>
+	<p>This web version of Task Master is a sequel to the Android app published in 2021 on <a href="https://play.google.com/store/apps/details?id=com.rsquared.taskmaster">Google Play</a>.  It improves on its predecessor by offering a more discrete range of importance and urgency, as well as optional due dates, descriptions, and an overall better visual layout.  Complete with user accounts, this task organizer can be used across multiple devices.</p>
 	<h2><a href="pizzapricer/">Pizza Pricer</a></h2>
 	<p>Simple tool to calculate the unit price (dollar per square inch or foot) of a pizza pie (or slice)</p>
 	<h2><a href="pdfpublisher/">PDF Publisher</a></h2>
