Updating chess site listing

--- a/sites.html
+++ b/sites.html
@@ -16,8 +16,8 @@
 	<p>Simple tool to calculate the unit price (dollar per square inch or foot) of a pizza pie (or slice)</p>
 	<h2><a href="pdfpublisher/">PDF Publisher</a></h2>
 	<p>This tool takes uploaded .doc, .docx, and .pdf files, converts them to .pdf, and then allows the user to arrange and rename the titles before finally merging them in that order.  The user may also add page numbers, a table of contents, and pdf bookmarks with detailed criteria.  Future versions will include cover page features and more.</p>
-	<h2><a href="chess/">ASCII Chess (online version)</a></h2>
-	<p>This is simply a Chess game using keyboard commands and ASCII characters, developed on Python, and then redeveloped on Flask to be deployed as a web application.  The game can be played 2-player remotely using a shared code, and the game can simply be bookmarked to resume at another time.  Enjoy!</a> 
+	<h2><a href="chess/">Unicode Chess (online version)</a></h2>
+	<p>This is simply a Chess game using keyboard commands and unicode chess characters, developed on Python, and then redeveloped on Flask to be deployed as a web application.  The game can be played 2-player remotely using a shared code, and the game can simply be bookmarked to resume at another time.  Enjoy!</a> 
 	<h2><a href="lesley/">Lesley Paige (demo)</a></h2>
 	<p>This is my sister's art website, built using PHP, HTML, CSS, JavaScript, and a MySQL database.  It has a fairly straight-forward layout and an admin area to allow her to add new artwork or edit existing artwork.  The link above is to a demo version of the site that does not contain any of her art, but you may see the live version at <a href="https://lesleypaigeart.com">lesleypaigeart.com</a>.  The demo version has a direct link to an unrestricted admin area that resets itself every hour (see the red button at the top of the site).</p>
 	<h2><a href="baltaa/">Baltimore Alcoholics Anonymous (demo)</a></h2>
