Incorporating "rename_images" and "Authentic Tarot"

--- a/rpi4.html
+++ b/rpi4.html
@@ -9,6 +9,9 @@
 	<link rel="manifest" href="img/site.webmanifest">
 </head>
 <body>
+	<h1>Linux</h1>
+	<h2><a href="https://github.com/rbrutherford3/rename_images">rename_images</a></h2>
+	<p>This tool takes the metadata (EXIF) from image files and renames them based on their date, and vice versa. This allows the user to have a uniform format for their image library and also fill in missing EXIF data, where applicable.</p>
 	<h1>Raspberry Pi</h1>
 	<p>These two products were made for the <a href="https://www.raspberrypi.org/">Raspberry Pi</a> operating system known as <a href="https://www.raspberrypi.org/software/operating-systems/">"Raspbian"</a>, which is now simply called "Raspberry Pi OS."  This device is a great starting point for anyone new to programming, Linux, or embedded systems in general.  It must be noted that these products are in no way affiliated with <a href="https://www.raspberrypi.org/about/">The Raspberry Pi Foundation</a>. 
 	<h2><a href="https://github.com/rbrutherford3/initpi">initPi</a></h2>
