--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h1>Spiff Industries</h1>
 	<h2>Software by <a href="https://rbrutherford3.github.io/">Robert Rutherford</a></h2>
 	<a href="sites.html"><img class="logo" src="img/www.svg" alt="Websites" /><figcaption>Websites</figcaption></a>
-	<a href="rpi4.html"><img class="logo" src="img/raspberry.svg" alt="Raspberry Pi" /><figcaption>Raspberry Pi</figcaption></a>
+	<a href="rpi4.html"><img class="logo" src="img/raspberry.svg" alt="Raspberry Pi / Linux" /><figcaption>Raspberry Pi / Linux</figcaption></a>
 	<a href="android.html"><img class="logo" src="img/android.svg" alt="Android Apps" /><figcaption>Android</figcaption></a>
 	<a href="https://github.com/rbrutherford3/"><img class="logo flip" src="img/github.svg" alt="GitHub Repository" /><figcaption>GitHub</figcaption></a>
 	<a href="https://www.linkedin.com/in/rbrutherford3/"><img class="logo flip" src="img/linkedin.svg" alt="LinkedIn" /><figcaption>LinkedIn</figcaption></a>
