--- a/sites.html
+++ b/sites.html
@@ -12,8 +12,6 @@
 	<h1>Websites and online applications</h1>
 	<h2><a href="taskmaster/">Task Master (web)</a></h2>
 	<p>This web version of Task Master is a sequel to the Android app published in 2021 on <a href="https://play.google.com/store/apps/details?id=com.rsquared.taskmaster">Google Play</a>.  It improves on its predecessor by offering a more discrete range of importance and urgency, as well as optional due dates, descriptions, and an overall better visual layout.  Complete with user accounts, this task organizer can be used across multiple devices.</p>
-	<h2><a href="pizzapricer/">Pizza Pricer</a></h2>
-	<p>Simple tool to calculate the unit price (dollar per square inch or foot) of a pizza pie (or slice)</p>
 	<h2><a href="pdfpublisher/">PDF Publisher</a></h2>
 	<p>This tool takes uploaded .doc, .docx, and .pdf files, converts them to .pdf, and then allows the user to arrange and rename the titles before finally merging them in that order.  The user may also add page numbers, a table of contents, and pdf bookmarks with detailed criteria.  Future versions will include cover page features and more.</p>
 	<h2><a href="chess/">Unicode Chess (online version)</a></h2>
@@ -22,6 +20,11 @@
 	<p>This is my sister's art website, built using PHP, HTML, CSS, JavaScript, and a MySQL database.  It has a fairly straight-forward layout and an admin area to allow her to add new artwork or edit existing artwork.  The link above is to a demo version of the site that does not contain any of her art, but you may see the live version at <a href="https://lesleypaigeart.com">lesleypaigeart.com</a>.  The demo version has a direct link to an unrestricted admin area that resets itself every hour (see the red button at the top of the site).</p>
 	<h2><a href="baltaa/">Baltimore Alcoholics Anonymous (demo)</a></h2>
 	<p>This website is for Alcoholics Anonymous in Baltimore, Maryland; built using PHP, HTML, CSS, some Bootstrap, JavaScript, and a MySQL database.  It matches AA groups with institution monthly meetings (jails, hospitals, etc) so that AA there might reach out to people in need.  The problem with the previous system was that there were too many groups and meetings to match them manually without unintentionally sticking a group with a meeting they had just attended or weren't suited for.  This tool ran for 2+ years before the task was taken over by someone who wanted to do their own approach.</p>
+	<h2><a href="authentictarot/">Authentic Tarot</a></h2>
+	<p>Do a tarot reading and shuffle the cards yourself! This tool shuffles according to "random" user input and pick the cards yourself, creating an authentic experiecne</p>
+	<h2><a href="pizzapricer/">Pizza Pricer</a></h2>
+	<p>Simple tool to calculate the unit price (dollar per square inch or foot) of a pizza pie (or slice)</p>
+	<hr>
 	<h2><a href="http://users.starpower.net/swn-a/main.html">Susan Woodward Notkins Architects, PC (very old)</a></h2>
 	<p>This site was completed around 2003 for a fairly small architects' studio that did fairly large projects.  This was a different era of web design, where Macromedia products were en vogue (including Fireworks and Flash).  There was a Flash intro that is skipped because Flash is no longer supported on any browsers.  Please keep in mind that this site is almost twenty years old now, so the styling is obsolete.</p>
 	<h2><a href="https://dev.nsta.org/evwebs/11193/">Audire Iterum (very old)</a></h2>
