--- a/android.html
+++ b/android.html
@@ -10,11 +10,9 @@
 </head>
 <body>
 	<h1>Android Apps</h1>
-	<h2><a href="https://play.google.com/store/apps/details?id=com.rsquared.taskmaster">Task Master</a></h2>
-	<!-- <a href="taskmaster.html"><h3><b>Task Master</b></h3></a> -->
+	<p>Unfortunately, neither app is available on Google Play at this time. Efforts are being made to reinstate them.</p>
+	<h2><a href="https://github.com/rbrutherford3/Task-Master-Android">Task Master</a></h2>
 	<p>This app is a simple task organizer that allows the user to set two attribute: priority and urgency.  Priority is a measure of a task's importance, whereas urgency is a measure of a task's need (or lack thereof) to be completed in a timely manner.  The idea was taken from the book <a href="https://www.franklincovey.com/the-7-habits/"><b>7 Habits of Highly Effective People</b></a>.  The tasks are then drawn out on a two-dimensional plane to show how each task compares with the next, and hopefully allow the user to prioritize efficently.  Click the link above for a online demonstration.</p>
-	<h2><a href="https://play.google.com/store/apps/details?id=com.rsquared.jurisdictionfinder">Jurisdiction Finder</a></h2>
-	<!-- <a href="jurisdictionfinder_startup.html"><h3><b>Jurisidiction Finder</b></h3></a> -->
+	<h2><a href="https://github.com/rbrutherford3/Jurisdiction-Finder">Jurisdiction Finder</a></h2>
 	<p>This app was originally meant to be a small part of a larger project that fell through.  It simply takes an address or GPS coordinate and let's the user know what legal jurisdiction (county, city, borough, township, parish, etc) that location resides in.  Click the link above for an online demonstration.</p>
-	<h2><a href="https://play.google.com/store/apps/developer?id=Robert+Rutherford">Both apps are available for free on Google Play</a></h2>
 </body>
