--- a/sites.html
+++ b/sites.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Web Software | Spiff Industries</title>
+	<title>Web Applications | Spiff Industries</title>
 	<link rel="stylesheet" href="main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
@@ -9,24 +9,19 @@
 	<link rel="manifest" href="img/site.webmanifest">
 </head>
 <body>
-	<h1>Websites and online applications</h1>
-	<h2><a href="taskmaster/">Task Master (web)</a></h2>
-	<p>This web version of Task Master is a sequel to the Android app published in 2021 on <a href="https://play.google.com/store/apps/details?id=com.rsquared.taskmaster">Google Play</a>.  It improves on its predecessor by offering a more discrete range of importance and urgency, as well as optional due dates, descriptions, and an overall better visual layout.  Complete with user accounts, this task organizer can be used across multiple devices.</p>
+	<h1>Web Applications</h1>
+	<h2><a href="taskmaster/">Task Master</a></h2>
+	<p>Organize your tasks by both priority and urgency</p>
 	<h2><a href="pdfpublisher/">PDF Publisher</a></h2>
-	<p>This tool takes uploaded .doc, .docx, and .pdf files, converts them to .pdf, and then allows the user to arrange and rename the titles before finally merging them in that order.  The user may also add page numbers, a table of contents, and pdf bookmarks with detailed criteria.  Future versions will include cover page features and more.</p>
-	<h2><a href="chess/">Unicode Chess (online version)</a></h2>
-	<p>This is simply a Chess game using keyboard commands and unicode chess characters, developed on Python, and then redeveloped on Flask to be deployed as a web application.  The game can be played 2-player remotely using a shared code, and the game can simply be bookmarked to resume at another time.  Enjoy!</a> 
+	<p>Combine files from various formats and add page numbers and a table of contents</p>
+	<h2><a href="chess/">Unicode Chess</a></h2>
+	<p>Play a game with a friend from afar</a> 
 	<h2><a href="lesley/">Lesley Paige (demo)</a></h2>
-	<p>This is my sister's art website, built using PHP, HTML, CSS, JavaScript, and a MySQL database.  It has a fairly straight-forward layout and an admin area to allow her to add new artwork or edit existing artwork.  The link above is to a demo version of the site that does not contain any of her art, but you may see the live version at <a href="https://lesleypaigeart.com">lesleypaigeart.com</a>.  The demo version has a direct link to an unrestricted admin area that resets itself every hour (see the red button at the top of the site).</p>
+	<p>Art website with a content management system</p>
 	<h2><a href="baltaa/">Baltimore Alcoholics Anonymous (demo)</a></h2>
-	<p>This website is for Alcoholics Anonymous in Baltimore, Maryland; built using PHP, HTML, CSS, some Bootstrap, JavaScript, and a MySQL database.  It matches AA groups with institution monthly meetings (jails, hospitals, etc) so that AA there might reach out to people in need.  The problem with the previous system was that there were too many groups and meetings to match them manually without unintentionally sticking a group with a meeting they had just attended or weren't suited for.  This tool ran for 2+ years before the task was taken over by someone who wanted to do their own approach.</p>
+	<p>A functional database management system tool</p>
 	<h2><a href="authentictarot/">Authentic Tarot</a></h2>
-	<p>Do a tarot reading and shuffle the cards yourself! This tool shuffles according to "random" user input and pick the cards yourself, creating an authentic experiecne</p>
+	<p>Shuffle your own cards with no random number generator functions</p>
 	<h2><a href="pizzapricer/">Pizza Pricer</a></h2>
-	<p>Simple tool to calculate the unit price (dollar per square inch or foot) of a pizza pie (or slice)</p>
-	<hr>
-	<h2><a href="http://users.starpower.net/swn-a/main.html">Susan Woodward Notkins Architects, PC (very old)</a></h2>
-	<p>This site was completed around 2003 for a fairly small architects' studio that did fairly large projects.  This was a different era of web design, where Macromedia products were en vogue (including Fireworks and Flash).  There was a Flash intro that is skipped because Flash is no longer supported on any browsers.  Please keep in mind that this site is almost twenty years old now, so the styling is obsolete.</p>
-	<h2><a href="https://dev.nsta.org/evwebs/11193/">Audire Iterum (very old)</a></h2>
-	<p>Winner of the 2000 Toshiba/NSTA ExploraVision awards (7th - 9th grade division), this site was made mostly with Flash animation to demonstrate a concept for an artificial ear.  A paper and a prototype were also submitted by a group of three ninth graders.  While practically none of the site is still functional (Flash animation is no longer supported), it remains on the ExploraVision website to provide examples of past winners.</p>
+	<p>Find out if you're getting the best deal on pizza</p>
 </body>
