Adjusting spacing and centering of images and text

--- a/android.html
+++ b/android.html
@@ -9,9 +9,11 @@
 	<link rel="manifest" href="img/site.webmanifest">
 </head>
 <body>
-	<h1>Android Apps</h1>
-	<h2><a href="https://github.com/rbrutherford3/Task-Master-Android">Task Master</a></h2>
-	<p>The Android version of the <a href="taskmaster/">Task Master web app </a> (currently unavailable on Google Play)</p>
-	<h2><a href="https://github.com/rbrutherford3/Jurisdiction-Finder">Jurisdiction Finder</a></h2>
-	<p>Check your legal jurisdiction based on GPS or address input (currently unavailable on Google Play)</p>
+	<div id="text">
+		<h1>Android Apps</h1>
+		<h2><a href="https://github.com/rbrutherford3/Task-Master-Android">Task Master</a></h2>
+		<p>The Android version of the <a href="taskmaster/">Task Master web app </a> (currently unavailable on Google Play)</p>
+		<h2><a href="https://github.com/rbrutherford3/Jurisdiction-Finder">Jurisdiction Finder</a></h2>
+		<p>Check your legal jurisdiction based on GPS or address input (currently unavailable on Google Play)</p>
+	</div>
 </body>
