--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 	<link rel="manifest" href="img/site.webmanifest">
 </head>
-<body style="text-align: center;">
-	<h1>Spiff Industries</h1>
-	<h2>Software by <a href="https://rbrutherford3.github.io/">Robert Rutherford</a></h2>
-	<a href="sites.html"><img class="logo" src="img/www.svg" alt="Websites" /><figcaption>Websites</figcaption></a>
-	<a href="rpi4.html"><img class="logo" src="img/raspberry.svg" alt="Raspberry Pi / Linux" /><figcaption>Raspberry Pi / Linux</figcaption></a>
-	<a href="android.html"><img class="logo" src="img/android.svg" alt="Android Apps" /><figcaption>Android</figcaption></a>
-	<a href="https://github.com/rbrutherford3/"><img class="logo flip" src="img/github.svg" alt="GitHub Repository" /><figcaption>GitHub</figcaption></a>
-	<a href="https://www.linkedin.com/in/rbrutherford3/"><img class="logo flip" src="img/linkedin.svg" alt="LinkedIn" /><figcaption>LinkedIn</figcaption></a>
-	<a href="https://stackoverflow.com/users/3130769/spiff"><img class="logo flip" src="img/stackoverflow.svg" alt="Stack Overflow" /><figcaption>Stack Overflow</figcaption></a>
+<body>
+	<div id="images">
+		<h1>Spiff Industries</h1>
+		<h2>Software by <a href="https://rbrutherford3.github.io/">Robert Rutherford</a></h2>
+		<a href="sites.html"><img class="logo" src="img/www.svg" alt="Websites" /><figcaption>Websites</figcaption></a>
+		<a href="rpi4.html"><img class="logo" src="img/raspberry.svg" alt="Raspberry Pi / Linux" /><figcaption>Raspberry Pi / Linux</figcaption></a>
+		<a href="android.html"><img class="logo" src="img/android.svg" alt="Android Apps" /><figcaption>Android</figcaption></a>
+		<a href="https://github.com/rbrutherford3/"><img class="logo flip" src="img/github.svg" alt="GitHub Repository" /><figcaption>GitHub</figcaption></a>
+		<a href="https://www.linkedin.com/in/rbrutherford3/"><img class="logo flip" src="img/linkedin.svg" alt="LinkedIn" /><figcaption>LinkedIn</figcaption></a>
+		<a href="https://stackoverflow.com/users/3130769/spiff"><img class="logo flip" src="img/stackoverflow.svg" alt="Stack Overflow" /><figcaption>Stack Overflow</figcaption></a>
+	</div>
 </body>
