--- a/sites.html
+++ b/sites.html
@@ -9,19 +9,21 @@
 	<link rel="manifest" href="img/site.webmanifest">
 </head>
 <body>
-	<h1>Web Applications</h1>
-	<h2><a href="taskmaster/">Task Master</a></h2>
-	<p>Organize your tasks by both priority and urgency</p>
-	<h2><a href="pdfpublisher/">PDF Publisher</a></h2>
-	<p>Combine files from various formats and add page numbers and a table of contents</p>
-	<h2><a href="chess/">Unicode Chess</a></h2>
-	<p>Play a game with a friend from afar</a> 
-	<h2><a href="lesley/">Lesley Paige (demo)</a></h2>
-	<p>Art website with a content management system</p>
-	<h2><a href="baltaa/">Baltimore Alcoholics Anonymous (demo)</a></h2>
-	<p>A functional database management system tool</p>
-	<h2><a href="authentictarot/">Authentic Tarot</a></h2>
-	<p>Shuffle your own cards with no random number generator functions</p>
-	<h2><a href="pizzapricer/">Pizza Pricer</a></h2>
-	<p>Find out if you're getting the best deal on pizza</p>
+	<div id="text">
+		<h1>Web Applications</h1>
+		<h2><a href="taskmaster/">Task Master</a></h2>
+		<p>Organize your tasks by both priority and urgency</p>
+		<h2><a href="pdfpublisher/">PDF Publisher</a></h2>
+		<p>Combine files from various formats and add page numbers and a table of contents</p>
+		<h2><a href="chess/">Unicode Chess</a></h2>
+		<p>Play a game with a friend from afar</a> 
+		<h2><a href="lesley/">Lesley Paige (demo)</a></h2>
+		<p>Art website with a content management system</p>
+		<h2><a href="baltaa/">Baltimore Alcoholics Anonymous (demo)</a></h2>
+		<p>A functional database management system tool</p>
+		<h2><a href="authentictarot/">Authentic Tarot</a></h2>
+		<p>Shuffle your own cards with no random number generator functions</p>
+		<h2><a href="pizzapricer/">Pizza Pricer</a></h2>
+		<p>Find out if you're getting the best deal on pizza</p>
+	</div>
 </body>
