--- a/maintenance.html
+++ b/maintenance.html
@@ -9,11 +9,13 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 	<link rel="manifest" href="img/site.webmanifest">
 </head>
-<body style="text-align: center;">
-	<h1>Spiff Industries</h1>
-	<h2>Software by <a href="https://rbrutherford3.github.io/">Robert Rutherford</a></h2>
-	<img class="logo flip" src="img/maintenance.svg" alt="Maintenance" /><figcaption>Site is closed for maintenance and will re-open at 3:05am EST</figcaption>
-	<a href="https://github.com/rbrutherford3/"><img class="logo flip" src="img/github.svg" alt="GitHub Repository" /><figcaption>GitHub</figcaption></a>
-	<a href="https://www.linkedin.com/in/rbrutherford3/"><img class="logo flip" src="img/linkedin.svg" alt="LinkedIn" /><figcaption>LinkedIn</figcaption></a>
-	<a href="https://stackoverflow.com/users/3130769/spiff"><img class="logo flip" src="img/stackoverflow.svg" alt="Stack Overflow" /><figcaption>Stack Overflow</figcaption></a>
+<body>
+	<div id="images">
+		<h1>Spiff Industries</h1>
+		<h2>Software by <a href="https://rbrutherford3.github.io/">Robert Rutherford</a></h2>
+		<img class="logo flip" src="img/maintenance.svg" alt="Maintenance" /><figcaption>Site is closed for maintenance and will re-open at 3:05am EST</figcaption>
+		<a href="https://github.com/rbrutherford3/"><img class="logo flip" src="img/github.svg" alt="GitHub Repository" /><figcaption>GitHub</figcaption></a>
+		<a href="https://www.linkedin.com/in/rbrutherford3/"><img class="logo flip" src="img/linkedin.svg" alt="LinkedIn" /><figcaption>LinkedIn</figcaption></a>
+		<a href="https://stackoverflow.com/users/3130769/spiff"><img class="logo flip" src="img/stackoverflow.svg" alt="Stack Overflow" /><figcaption>Stack Overflow</figcaption></a>
+	</div>
 </body>
