--- a/rpi4.html
+++ b/rpi4.html
@@ -9,12 +9,14 @@
 	<link rel="manifest" href="img/site.webmanifest">
 </head>
 <body>
-	<h1>Linux</h1>
-	<h2><a href="https://github.com/rbrutherford3/rename_images">rename_images</a></h2>
-	<p>Organize the filenames and EXIF data of your photos</p>
-	<h1><a href="https://www.raspberrypi.org/">Raspberry Pi</a></h1>
-	<h2><a href="https://github.com/rbrutherford3/initpi">initPi</a></h2>
-	<p>Change how your Raspberry Pi is initially set up</p>
-	<h2><a href="https://github.com/rbrutherford3/customNOOBS">customNOOBS</a></h2>
-	<p>Customize your essential Raspberry Pi settings</p>
+	<div id="text">
+		<h1>Linux</h1>
+		<h2><a href="https://github.com/rbrutherford3/rename_images">rename_images</a></h2>
+		<p>Organize the filenames and EXIF data of your photos</p>
+		<h1><a href="https://www.raspberrypi.org/">Raspberry Pi</a></h1>
+		<h2><a href="https://github.com/rbrutherford3/initpi">initPi</a></h2>
+		<p>Change how your Raspberry Pi is initially set up</p>
+		<h2><a href="https://github.com/rbrutherford3/customNOOBS">customNOOBS</a></h2>
+		<p>Customize your essential Raspberry Pi settings</p>
+	</div>
 </body>
